manifests/workloads/tekton/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-robotwizard-co-uk-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tekton.robotwizard.co.uk`)
      kind: Rule
      services:
        - name: tekton
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-robotwizard-co-uk-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tekton.robotwizard.co.uk`)
      kind: Rule
      services:
        - name: tekton
          port: 80
  tls:
    secretName: tekton-cert
